Create standalone parent pom for wildfly-clustering projects.