@@ -16,43 +16,15 @@
 	<artifactId>wildfly-clustering</artifactId>
 	<packaging>pom</packaging>
 
-	<name>WildFly Clustering: Modules</name>
-
 	<properties>
-		<javadoc.aggregation.skip>true</javadoc.aggregation.skip>
-		<jdk.runtime.args>-Djava.util.logging.manager=org.jboss.logmanager.LogManager --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</jdk.runtime.args>
-		<jacoco.skip>true</jacoco.skip>
-		<maven.compiler.release>17</maven.compiler.release>
-		<!-- Skip redundant source packaging -->
-		<skipReleaseAssembly>true</skipReleaseAssembly>
-
-		<!-- Provided dependency versions -->
-		<version.jakarta.transaction>2.0.1</version.jakarta.transaction>
-		<version.net.jcip>1.0</version.net.jcip>
-
-		<!-- Compile dependency versions -->
-		<version.io.github.resilience4j>2.3.0</version.io.github.resilience4j>
-		<version.org.infinispan>15.2.6.Final</version.org.infinispan>
-		<version.org.jboss.marshalling>2.2.3.Final</version.org.jboss.marshalling>
-		<version.org.jgroups>5.4.11.Final</version.org.jgroups>
-		<version.org.kohsuke.metainf-services>1.11</version.org.kohsuke.metainf-services>
-
-		<!-- Test dependency versions -->
-		<version.com.h2database>2.4.240</version.com.h2database>
-		<version.io.undertow>2.3.19.Final</version.io.undertow>
-		<version.org.apache.tomcat>11.0.11</version.org.apache.tomcat>
-		<version.org.assertj>3.27.6</version.org.assertj>
-		<version.org.jacoco>0.8.13</version.org.jacoco>
-		<version.org.jboss.arquillian>1.10.0.Final</version.org.jboss.arquillian>
-		<version.org.jboss.logmanager>3.1.2.Final</version.org.jboss.logmanager>
-		<version.org.jboss.shrinkwrap>1.2.6</version.org.jboss.shrinkwrap>
-		<version.org.junit>5.13.4</version.org.junit>
-		<version.org.mockito>5.20.0</version.org.mockito>
-		<version.org.slf4j>2.0.17</version.org.slf4j>
-		<version.org.testcontainers>1.21.3</version.org.testcontainers>
+		<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+		<maven.surefire.parameters>${java.runtime.parameters} -javaagent:${project.build.directory}/agent/mockito-core.jar</maven.surefire.parameters>
 	</properties>
 
+	<name>${project.repository.name}: Modules</name>
+
 	<modules>
+		<module>bom/parent</module>
 		<module>bom</module>
 		<module>arquillian</module>
 		<module>cache</module>
@@ -69,68 +41,68 @@
 			<dependency>
 				<groupId>jakarta.transaction</groupId>
 				<artifactId>jakarta.transaction-api</artifactId>
-				<version>${version.jakarta.transaction}</version>
+				<version>2.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>net.jcip</groupId>
 				<artifactId>jcip-annotations</artifactId>
-				<version>${version.net.jcip}</version>
+				<version>1.0</version>
 			</dependency>
 
 			<!-- BOM dependencies -->
 			<dependency>
 				<groupId>org.assertj</groupId>
 				<artifactId>assertj-bom</artifactId>
-				<version>${version.org.assertj}</version>
+				<version>3.27.6</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.infinispan</groupId>
 				<artifactId>infinispan-bom</artifactId>
-				<version>${version.org.infinispan}</version>
+				<version>15.2.6.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>${version.org.junit}</version>
+				<version>5.13.4</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-bom</artifactId>
-				<version>${version.org.mockito}</version>
+				<version>5.20.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
-				<version>${version.org.jboss.arquillian}</version>
+				<version>1.10.0.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.shrinkwrap</groupId>
 				<artifactId>shrinkwrap-bom</artifactId>
-				<version>${version.org.jboss.shrinkwrap}</version>
+				<version>1.2.6</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-bom</artifactId>
-				<version>${version.org.slf4j}</version>
+				<version>2.0.17</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.testcontainers</groupId>
 				<artifactId>testcontainers-bom</artifactId>
-				<version>${version.org.testcontainers}</version>
+				<version>1.21.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -144,44 +116,44 @@
 			<dependency>
 				<groupId>io.github.resilience4j</groupId>
 				<artifactId>resilience4j-retry</artifactId>
-				<version>${version.io.github.resilience4j}</version>
+				<version>2.3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.marshalling</groupId>
 				<artifactId>jboss-marshalling</artifactId>
-				<version>${version.org.jboss.marshalling}</version>
+				<version>2.2.3.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jgroups</groupId>
 				<artifactId>jgroups</artifactId>
-				<version>${version.org.jgroups}</version>
+				<version>5.4.11.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.kohsuke.metainf-services</groupId>
 				<artifactId>metainf-services</artifactId>
-				<version>${version.org.kohsuke.metainf-services}</version>
+				<version>1.11</version>
 			</dependency>
 
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>${version.com.h2database}</version>
+				<version>2.4.240</version>
 			</dependency>
 			<dependency>
 				<groupId>io.undertow</groupId>
 				<artifactId>undertow-core</artifactId>
-				<version>${version.io.undertow}</version>
+				<version>2.3.19.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
 				<artifactId>tomcat-catalina</artifactId>
-				<version>${version.org.apache.tomcat}</version>
+				<version>11.0.11</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.logmanager</groupId>
 				<artifactId>jboss-logmanager</artifactId>
-				<version>${version.org.jboss.logmanager}</version>
+				<version>3.1.2.Final</version>
 				<exclusions>
 					<!-- Infinispan requires more recent version -->
 					<exclusion>
@@ -193,7 +165,7 @@
 			<dependency>
 				<groupId>org.jboss.marshalling</groupId>
 				<artifactId>jboss-marshalling-river</artifactId>
-				<version>${version.org.jboss.marshalling}</version>
+				<version>2.2.3.Final</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -240,34 +212,6 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<configuration>
-					<configLocation>checkstyle.xml</configLocation>
-					<logViolationsToConsole>true</logViolationsToConsole>
-					<sourceDirectories>
-						<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
-						<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
-					</sourceDirectories>
-				</configuration>
-				<executions>
-					<execution>
-						<id>check-sources</id>
-						<phase>process-sources</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>check-test-sources</id>
-						<phase>process-test-sources</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<annotationProcessorPaths>
@@ -285,18 +229,6 @@
 						</annotationProcessorPath>
 					</annotationProcessorPaths>
 				</configuration>
-				<executions>
-					<execution>
-						<id>default-testCompile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-						<configuration>
-							<parameters>true</parameters>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -319,103 +251,25 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>default-integration-test</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-						<configuration>
-							<trimStackTrace>false</trimStackTrace>
-							<argLine>${jdk.runtime.args}</argLine>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>default-test-jar</id>
-						<phase>package</phase>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-						<configuration>
-							<skipIfEmpty>true</skipIfEmpty>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>package-javadoc</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>package-source</id>
-						<phase>package</phase>
-						<goals>
-							<goal>test-jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
+				<configuration>
+					<sourceFileExcludes>
+						<sourceFileExclude>org/wildfly/clustering/cache/infinispan/embedded/**/WildFlyClustering*Impl.java</sourceFileExclude>
+						<sourceFileExclude>**/*SerializationContextInitializerImpl.java</sourceFileExclude>
+					</sourceFileExcludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>${jdk.runtime.args} -javaagent:${project.build.directory}/agent/mockito-core.jar</argLine>
+					<argLine>${maven.surefire.parameters} -javaagent:${project.build.directory}/agent/mockito-core.jar</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<reportSets>
-					<reportSet>
-						<id>jacoco</id>
-						<reports>
-							<report>report</report>
-							<report>report-integration</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
-
 	<profiles>
-		<profile>
-			<id>quickly</id>
-			<properties>
-				<checkstyle.skip>true</checkstyle.skip>
-				<maven.javadoc.skip>true</maven.javadoc.skip>
-				<skipTests>true</skipTests>
-				<skipITs>true</skipITs>
-			</properties>
-		</profile>
 		<profile>
 			<id>jboss-release</id>
 			<properties>
@@ -442,41 +296,6 @@
 									<!-- Servlet spec modules are mutually exclusive -->
 									<excludePackageNames>org.wildfly.clustering.session.spec.servlet:org.wildfly.clustering.session.spec.container:org.wildfly.clustering.session.spec.container.*</excludePackageNames>
 								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>coverage</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>${argLine} ${jdk.runtime.args}</argLine>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>${argLine} ${jdk.runtime.args}</argLine>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>${version.org.jacoco}</version>
-						<executions>
-							<execution>
-								<id>jacoco-prepare-agent</id>
-								<goals>
-									<goal>prepare-agent</goal>
-									<goal>prepare-agent-integration</goal>
-								</goals>
 							</execution>
 						</executions>
 					</plugin>
